# plover-retro-untranslator

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
plover_retro_untranslator/: __init__.py  spelling_converter.py
