[metadata]
name = plover_retro_untranslator
version = 0.4.0
keywords = plover
description = Converts the last X translations to a specified format consisting of raw steno and/or a translation 
long_description = file:README.md
long_description_content_type = text/markdown
author = Josiah-tan
license = GNU General Public License v3 (GPLv3)
url = https://github.com/Josiah-tan/plover-retro-untranslator
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin plover_retro_untranslator

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  PyQt5>=5.5
  
packages =
  plover_retro_untranslator

[options.entry_points]
plover.macro =
  retro_untranslator = plover_retro_untranslator:retro_untranslator
